Bone Size property is not copied when a bone is copied. #64611

Closed
opened 2019-05-14 18:28:09 +02:00 by Demeter Dzadik · 5 comments
Member

Blender Version
Broken: 2.80, e8daa61570

Short description of error
If a bone's "bone size" checkbox is disabled under Properties Panel->Bone tab->Viewport DIsplay->"Bone Size", the copied bone will have it reset to enabled, which is the default. With small bone sizes and large shape objects, this can result in the duplicated bone appearing almost invisible.

Every other property in that panel is retained when duplicating a bone, so I think this is a bug.

Steps to reproduce
bone_scale_copy_bug.blend

  • Go in edit mode and copy the bone
  • Bone Scale is reset to enabled on the new copy.

bone_size_copy_bug.webm

**Blender Version** Broken: 2.80, e8daa615704b **Short description of error** If a bone's "bone size" checkbox is disabled under Properties Panel->Bone tab->Viewport DIsplay->"Bone Size", the copied bone will have it reset to enabled, which is the default. With small bone sizes and large shape objects, this can result in the duplicated bone appearing almost invisible. Every other property in that panel is retained when duplicating a bone, so I think this is a bug. **Steps to reproduce** [bone_scale_copy_bug.blend](https://archive.blender.org/developer/F7036747/bone_scale_copy_bug.blend) - Go in edit mode and copy the bone - Bone Scale is reset to enabled on the new copy. [bone_size_copy_bug.webm](https://archive.blender.org/developer/F7036705/bone_size_copy_bug.webm)
Author
Member

Added subscriber: @Mets

Added subscriber: @Mets
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-05-14 19:29:43 +02:00
Member

Confirmed, checking...

Confirmed, checking...

This issue was referenced by 913db2e8a4

This issue was referenced by 913db2e8a4ef84834c6efe04c336aca9fc2851de
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64611
No description provided.