Fix T64611: Bone Size property is not copied when a bone is copied